# simplebert

./: README.md  checkpoint.py  setup.cfg  simple_bert_config.json  tokenizer.py  transformer.py
examples/: README.md  extract_features.py  masked_language_model.py  sentiment_weibo.py
src/simplebert/: __init__.py  models.py  pretrained.py  pretrained_models.json  tokenizer.py  tokenizers.py  transformer.py  utils.py
src/unittests/: test_checkpoint.py  test_model.py  test_tokenizer.py
src/unittests/testdata/: testdata_tokenizer_cn.json  testdata_tokenizer_en_cased.json  testdata_tokenizer_en_uncased.json
unittests/: test_checkpoint.py  test_model.py  test_models.py  test_pretrained.py  test_tokenizer.py  test_tokenizers.py
unittests/testdata/: testdata_bpe_tokenizer.json  testdata_robert_model.json
