[metadata]
name = simplebert
version = 0.1.0
author = gaolichen
author_email = galic.chen@gmail.com
description = A package for various transformer based NLP models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaolichen/simplebert
project_urls =
    Bug Tracker = https://github.com/gaolichen/simplebert/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy >= "1.19.5"
    tensorflow >= "2.5.0"

[options.packages.find]
where = src

[options.package_data]
* = *.json
